# cor

./: .gitignore  README.md  cor.ml  cor.opam  corjs.ml  dune  dune-project  libcor.ml  libcor.mli  nix-install.sh  shell.nix
cor/: cor.ml  dune
cor/roc/: dune  language.ml  lexer.ml  parser.mly  syntax.ml  util.ml
experiments/compose_fx/: can.ml  can_lower.ml  canonical.ml  compose_fx.ml  dune  eval.ml  ir.ml  ir_check.ml  ir_ctx.ml  ir_layout.ml  ir_lower.ml  ir_sort.ml  lexer.ml  loc.ml  lower.ml  mono.ml  mono_lower.ml  mono_symbol.ml  monomorphize.ml  parser.mly  solve.ml  symbol.ml  syntax.ml  type.ml  util.ml
experiments/compose_fx/test/: cons-map-infer.roc  cons-map.roc  infer-handler.roc  inout.roc  lambda-set-dispatch-closure.roc  lambda-set-dispatch-toplevel.roc  map-int.roc  poly-call-with-guarded-mono-lambda.roc  poly-call-with-guarded-poly-lambda.roc  roc-issue-5464-infer.roc  roc-issue-5464.roc
experiments/easy-tags/: README.md  dune  easy_tags.ml  lexer.ml  parser.mly  solve.ml  syntax.ml
experiments/easy-tags/test/: branch.roc
experiments/easy_tags/: easy_tags.ml  parser.mly  solve.ml  syntax.ml
experiments/refine/: README.md  as_conv.ml  decision_tree.ml  dune  eval.ml  example  ir.ml  lexer.ml  lower.ml  parser.mly  refine.ml  solve.ml  syntax.ml  util.ml
experiments/refine/test/: as-conv.roc  decision-tree.roc  multi-pattern-branch.roc  refine-deep-nesting.roc  refine-larger.roc  refine-smaller.roc
experiments/uls/: README.md  dune  eval.ml  example.roc  ir.ml  lexer.ml  mono.ml  parser.mly  solve.ml  syntax.ml  uls.ml  util.ml
experiments/uls/test/: basic-resolve.roc  choice.roc  generalized-alias.roc  polymorphic-lambda-set.roc  prototype-chain.roc
js/: package.json  prim.js
roc/: dune  language.ml  lexer.ml  roc.ml  syntax.ml
