(menhir
  (flags --explain --fixed-exception --no-dollars)
  (modules parser))

(library
 (name compose_fx)
 (modules compose_fx symbol syntax lexer parser canonical solve
          monomorphize ir ir_layout ir_lower ir_check
          eval
          util)
 (libraries language sedlex menhirLib)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_inline_test sedlex.ppx)))
