(menhir
  (flags --explain --fixed-exception --no-dollars)
  (modules parser))

(library
 (name compose_fx)
 (modules compose_fx
          loc symbol type syntax
          lexer parser
          can can_lower
          solve
          ir ir_layout
          mono mono_lower mono_symbol
          ir_lower ir_check
          eval
          util)
 (libraries language sedlex menhirLib)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_inline_test sedlex.ppx)))
