(menhir
  (flags --explain --fixed-exception --no-dollars)
  (modules parser))

(library
 (name refine)
 (modules refine syntax lexer parser util solve as_conv ir decision_tree lower eval)
 (libraries language sedlex menhirLib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppx_deriving.show sedlex.ppx)))
